Added new endpoint GET /users for admin
